--- a/index.html
+++ b/index.html
@@ -3,154 +3,124 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>鬼灭之刃</title>
-    <!-- 引入外部样式 -->
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>欢迎查看我的简历</title>
 </head>
+<style>
+    * {
+        margin: 0px;
+        padding: 0px;
+        list-style: none;
+    }
+
+    body {
+        background-color: #fff;
+    }
+
+    a {
+        color: #0563C1;
+        text-decoration: underline;
+    }
+
+    #bigbox {
+        max-width: 746px;
+        margin: 20px auto;
+    }
+
+    p {
+        line-height: 1.6rem;
+    }
+
+    .main p {
+        margin: 10px 0px;
+    }
+
+    @media only screen and (max-width: 768px) {
+
+        #bigbox {
+            width: 92vw;
+        }
+
+    }
+</style>
 
 <body>
-    <!-- 头部 -->
-    <header>
-        <nav>
-            <ul>
-                <img class="logo" src="./images/logo.png" alt="">
-                <li>
-                    <a href="./index.html">网站首页</a>
-                </li>
-                <span>|</span>
-              
-            </ul>
-        </nav>
-    </header>
-    <div class="main">
-        <!-- 轮播图开始 -->
-        <div class="box_l">
-            <ul class="list_l">
-                <li><img src="./images/banner1.png" alt=""></li>
-                <li><img src="./images/banner2.png" alt=""></li>
-                <li><img src="./images/banner3.png" alt=""></li>
-                <li><img src="./images/banner4.png" alt=""></li>
-            </ul>
-            <ul class="little_l">
-                <li class="active_l"></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-            <div class="pre_l">
-                < <em></em>
-            </div>
-            <div class="next_l">></div>
+    <div id="bigbox">
+        <div class="start">
+            <p>Claire, Chen</p>
+            <p>School: Zhejiang University</p>
+            <p>Phone number:18358164964</p>
+            <p>email address: <a>murmur0504@163.com</a> </p>
         </div>
-        <!-- 简介 -->
-        <h1>
-            鬼滅の刃
-            <p>about</p>
-            <img src="./images/title.png" alt="">
-        </h1>
-        <div class="jianjie">
+        <div class="main">
+            <p>Dear Recruiting Manager,</p>
             <p>
-                时值日本大正时期。
+                I am writing to indicate my interest in applying for the 2024 Bloomberg customer support summer
+                internship
+                position which requires Mandarin speakers in Shanghai. I am currently a third-year student majoring
+                intelligent accounting in Chu Kochen Honors College, Zhejiang University, with experience working in a
+                fast-paced work environment, a firm understanding of corporate finance concepts and relevant knowledge
+                about
+                accounting as well as computer science. I really enjoy the process of solving problems for others
+                successfully and I believe my outgoing personality, strong work ethic, and passion for finance coupled
+                with
+                my intellectual curiosity and technical skills would make me a great fit for this position.
             </p>
             <p>
-                传说太阳下山后，有恶鬼出没吃人。亦有猎鬼人斩杀恶鬼、保护人们。
+                During my time as an intern at the financing equity department of investment bank in BOC
+                International(China) in the 2024 winter vacation, I participated in the update of the prospectus for the
+                IPO
+                of a certain agricultural chemical giant. Based on the details of related party transactions provided by
+                the
+                audit, I verified the specific data of more than 100 related party transactions of a certain enterprise,
+                thus knowing the changes in related party transaction types, counterparties, amounts, etc. By involved
+                in
+                writing asset restructuring proposal, I learned about relevant laws and regulations and the
+                restructuring
+                plan, which helped me to deepen the understanding of capital market. During I was an intern at KPMG in
+                the
+                summer vacation of 2023, I participated in the audit of financial statements for a hotel listed company.
+                By
+                completing accounting drafts for certain subjects and checking whether the ending balance of the bank
+                reconciliation statement matches the balance in statement of account ,etc. I have gained a deeper
+                understanding of the company’s market position, business and business model, industry competition
+                pattern
+                and core competitiveness through industry analysis and benchmarking research. In addition, I learned how
+                to
+                effectively communicate with my team and to finish multiple tasks within limited time.
             </p>
             <p>
-                卖炭少年炭治郎，他那平凡而幸福的日常生活，在家人遭到恶鬼袭击的那一天发生了剧变。母亲与四个弟弟妹妹惨遭杀害，而与他一起生还的妹妹祢豆子亦异变成凶暴的鬼。
+                With all the skills and experience I have acquired from my past internships and through college
+                education, I
+                really look forward to providing exceptional customer service to a broad range of clients and mastering
+                the
+                method of fast and effective management of various client workflows and hardware/software issues. And
+                I’m
+                deeply attracted by the open, inclusive and collaborative working environment where individuals have
+                chances
+                to progress faster.
             </p>
             <p>
-                在猎鬼人的指引下，立志成为猎鬼人的炭治郎与变成鬼却尚存理智的祢豆子踏上了旅程。通过艰苦的剑术修行与赌命试炼，炭治郎成为了猎鬼人组织“鬼杀队”的一员。
+                Please see my attached resume with other campus and work experience during the past several years. As a
+                passionate and diligent student devoted to my studies and work, I believe that I am a great fit as a
+                Bloomberg customer support summer intern in terms of my experience and personality. I would like to
+                thank
+                you for this opportunity, and I really appreciate your time reviewing my qualifications. I can be
+                reached at
+                <a>murmur0504@163.com</a>.
             </p>
             <p>
-                为了让妹妹祢豆子变回人类，为了讨伐杀害家人的恶鬼，为了斩断悲伤的连锁，少年与鬼的战斗不曾停歇。
+                Thank you for your consideration and I look forward to hearing from you.
             </p>
-            <p>
-                幸福被破坏之时，总是弥漫着鲜血的味道。纵然我身俱灭，定将恶鬼斩杀！血风剑戟冒险谭，开幕！
-            </p>
-
-            <a href="" class="more">查看更多</a>
         </div>
-        <!-- 角色 -->
-        <h1 class="h1_2">
-            主人公
-            <p>main character</p>
-            <img src="./images/title.png" alt="">
-        </h1>
-        <div id="people">
-            <div>
-                <div class="people_box">
-                    <div class="img_box">
-                        <img src="./images/p1.png" alt="">
-                    </div>
-                    <p>
-                        灶门炭治郎
-                    </p>
-                    <p class="people_txt">
-                        15岁，善良温柔的少年，重视家人，个性认真顽固有担当的长男。以拯救变成鬼的妹妹祢豆子，为家族报仇为目标，在富冈义勇的引荐下成为鳞泷左近次的弟子，经过2年的艰苦训练，通过最终选拔成为鬼杀队剑士。背负着妹妹藏身的箱子行动，重视妹妹甚于自己的生命。
-                    </p>
-                </div>
-                <div class="people_box">
-                    <div class="img_box">
-                        <img src="./images/p2.png" alt="">
-                    </div>
-                    <p>
-                        灶门祢豆子
-                    </p>
-                    <p class="people_txt">
-                        14岁，家人被鬼袭击后的唯一生还者，因鬼舞辻无惨的血而变成了鬼。变成鬼后一度袭击哥哥炭治郎，但被他唤醒了尚存的感情，压制住了吃人本能保护了炭治郎，获得了富冈义勇的认同。
-                    </p>
-                </div>
-                <div class="people_box">
-                    <div class="img_box">
-                        <img src="./images/p3.png" alt="">
-                    </div>
-                    <p>
-                        我妻善逸
-                    </p>
-                    <p class="people_txt">
-                        6岁，炭治郎同期的鬼杀队剑士。消极的胆怯少年，雷之呼吸传人之一。只掌握了雷之呼吸·壹之型（共有6种招式）。对自己作为剑士的实力完全没有自信，紧张到极限时会昏睡进入半觉醒状态，发挥本来的强大实力。有着过人的听觉，能从声音读取人的情感，亦能分辨人与鬼。
-                    </p>
-                </div>
-            </div>
-            <a href="" class="more">查看更多</a>
-        </div>
-        <!-- 活动 -->
-        <h1 class="h1_3">
-            活動・その他
-            <p>EVENT/OTHERS</p>
-            <img src="./images/title.png" alt="">
-        </h1>
-        <div class="event">
-            <div class="event_box">
-                <img src="./images/event.jpg" alt="">
-            </div>
-            <div class="event_box">
-                <img src="./images/event2.jpg" alt="">
-            </div>
-            <div class="event_box">
-                <img src="./images/event3.jpg" alt="">
-            </div>
-            <div class="event_box">
-                <img src="./images/event4.jpg" alt="">
-            </div>
-            <div class="event_box">
-                <img src="./images/event5.jpg" alt="">
-            </div>
+        <div class="finish">
+            <p>Sincerely, </p>
+            <p>
+                Claire
+            </p>
         </div>
     </div>
-    <!-- 底部版权信息 -->
-    <footer>
-        <div>
-            <img src="./images/logo2.jpg" alt="">
-            <img src="./images/logo3.jpg" alt="">
-        </div>
-        <p>
-            版权所有©鬼灭之刃
-        </p>
-    </footer>
 </body>
-<!-- 引入js轮播图 -->
-<script src="./js/banner.js"></script>
 
 </html>
